# windows-tasks-services-checker

./: CMakeLists.txt  CheckServices.cpp  CheckServices.hpp  CheckTasks.cpp  CheckTasks.hpp  Conclusion.cpp  Conclusion.hpp  ConfigReader.cpp  ConfigReader.hpp  README.md  config.txt  main.cpp
